Fixes problems caused during rebase with master
- The previous rebase accidentally lost some change from master,
  for where files had been moved. Added those changes back in.
- Some additional changes required after master refactoring.
- And some minor tidies (e.g. RabbitBroker and QpidBroker deleting commented out code).